<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Event Planner</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="filters">Filters</string>
    <string name="Album50fotografija">Album sa 50 fotografija</string>
    <string name="FotoBook">Foto book</string>
    <string name="AlbumOpis">Album sa 50 izrađenih fotografija</string>
    <string name="Kategorija">Kategorija    Foto i video</string>
    <string name="Potkategorija">Potkategorija Fotografije i Albumi</string>
    <string name="TipDogadjaja">Tip događaja  svadbe, rođendani, krštenja, rođenja</string>
    <string name="Cena2000">Cena 2000 din</string>
    <string name="Cena5000">Cena 5000 din</string>
    <string name="DostupanDa">Dostupan DA</string>
    <string name="category">Category</string>
    <string name="category1">Hospitality establishments, food, catering, cakes and pastries</string>
    <string name="category2">Accommodation</string>
    <string name="category3">Music and entertainment</string>
    <string name="category4">Photo and video</string>
    <string name="category5">Decoration and lightning</string>
    <string name="category6">Clothing and styling</string>
    <string name="category7">Care and beauty</string>
    <string name="category8">Planning and coordination</string>
    <string name="category9">Invitations and stationery</string>
    <string name="category10">Logistics and security</string>
    <string name="eventType">Event type</string>
    <string name="wedding">Weddings</string>
    <string name="engagement">Engagement</string>
    <string name="birthday">Engagement</string>
    <string name="anniversaly">Engagement</string>
    <string name="enter_price">Enter price</string>
    <string name="availability">Availability</string>
    <string name="available">Available</string>
    <string name="not_available">Unavailable</string>
    <string name="enter_description">Enter description</string>
    <string name="create_product">Create new product</string>
    <string name="subcategory">Subcategory</string>
    <string name="titleA">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="availableYesNo">Available</string>
    <string name="visible">Visible</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addImage">Add image</string>
    <string name="addEventTypes">Add types</string>
    <string name="submit">Submit</string>
    <string name="culturalEvent">Cultural and entertainment</string>
    <string name="privateEvent">Private</string>
    <string name="corporateEvent">Corporate</string>
    <string name="educationEvent">Education</string>
    <string name="sportEvent">Sport</string>
    <string name="humanitarianEvent">Humanitarian and charitable</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="generateagenda">Generate PDF file</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="employees">Employees</string>
    <string name="employee_common_name">Jana Janic</string>
    <string name="employee_email">jana@gmail.com</string>
    <string name="info">info</string>
    <string name="employee_settings">Employee Settings</string>
    <string name="employee_deactivate">Deactivate</string>
    <string name="new_employee">Register new employee</string>
    <string name="cart">Employee Registration</string>
    <string name="employee_registration">Register new Employee</string>
    <string name="next_step">Next</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="working_hours">Working Hours</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="employee_phone_number">+3810616065342</string>
    <string name="em_address">Koste Racina 14</string>
    <string name="em_phone_number">+3810616067574</string>
    <string name="work_time">7 - 20</string>
    <string name="none">/</string>
    <string name="edit_working_hours">Edit employee working hours</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="work_calendar">Work Calendar</string>
    <string name="week">21.04.2024. - 28.04.2024</string>
    <string name="new_event">New Event</string>
    <string name="date">Date</string>
    <string name="occupied">occupied</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="type">Type</string>
    <string name="employee_services">Services</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="registerOD">Register as OD</string>
    <string name="registerPUP">Register as PUP</string>
    <string name="welcome">"Welcome!"</string>
    <string name="or">"or"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">"Name"</string>
    <string name="surname">"Surname"</string>
    <string name="home_address">"Home address"</string>
    <string name="phone">"Phone"</string>
    <string name="event_organizer">"Event organizer"</string>
    <string name="company_details">"Company details"</string>
    <string name="product_provider">"Product provider"</string>
    <string name="event_name">"Name"</string>
    <string name="title">"Create Event"</string>
    <string name="creation_type">"Pick event type"</string>
    <string name="set_type">"Click and choose"</string>
    <string name="category_pick">""Pick category</string>
    <string name="guest_num">"Number of guests"</string>
    <string name="privacy">"Event privacy"</string>
    <string name="location">"Location"</string>
    <string name="event_date">"Date"</string>
    <string name="km">"Maximum km"</string>
    <string name="enter_event">"Create"</string>
    <string name="open_privacy">"Open privacy"</string>
    <string name="closed_privacy">"Closed privacy"</string>
    <string name="event_type_1">"Privatni događaji"</string>
    <string name="event_type_2">"Korporativni događaji"</string>
    <string name="event_type_3">"Događaji u obrazovanju"</string>
    <string name="event_type_4">"Kulturni i zabavni događaji"</string>
    <string name="event_type_5">"Sportski događaji"</string>
    <string name="event_type_6">"Humanitarni i dobrotvorni događaji"</string>
    <string name="event_type_7">"Vlada i politički događaji"</string>
    <string name="event_type_8">"Drugo"</string>
    <string name="one_event_type">"Event type"</string>
    <string name="search">"Search"</string>
    <string name="filter_all">"Filter here"</string>
    <string name="submit_filter">"Submit"</string>
    <string name="budget_planing">"Planing budget"</string>
    <string name="category_suggestion">"Category suggestion"</string>
    <string name="category_suggestion_desc">"Suggestion Description"</string>
    <string name="budget_plan">"Budget plan"</string>
    <string name="suggestion_cat">"All suggested event subcategories"</string>
    <string name="suggestion_desc">"Suggested categories description"</string>
    <string name="planned_budget_items">"Planned budget items"</string>
    <string name="pick_subcat">"Pick subcategory"</string>
    <string name="add_sub">"Add"</string>
    <string name="agenda">"Add agenda"</string>
    <string name="guests">"Add guest list"</string>
    <string name="activity_name">"Name"</string>
    <string name="activity_desc">"Description"</string>
    <string name="activity_loc">"Location"</string>
   <string name="enter_txt">"Enter field"</string>
    <string name="clocks">"Start time"</string>
    <string name="clocke">"End time"</string>
    <string name="guest_name_label">Name and surname</string>
    <string name="guest_name_hint">Unesite ime i prezime</string>
    <string name="guest_age_label">Age</string>
    <string name="guest_invited_label">"Is he/she invited?"</string>
    <string name="guest_accepted_label">Did he/she accepted invitation?</string>
    <string name="guest_special_requests_label">Special requests</string>
    <string name="vegan">Vegan</string>
    <string name="noreq">No requests</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="all_guests">See all guest list</string>
    <string name="send">Send</string>
    <string-array name="age_ranges">
        <item>0-3</item>
        <item>3-10</item>
        <item>10-18</item>
        <item>18-30</item>
        <item>30-50</item>
        <item>50-70</item>
        <item>70+</item>
    </string-array>
    <string-array name="spinner_items_event">
        <item>Privatni događaji</item>
        <item>Korporativni događaji</item>
        <item>Događaji u obrazovanju</item>
        <item>Kulturni i zabavni događaji</item>
        <item>Sportski događaji</item>
        <item>Humanitarni i dobrotvorni događaji</item>
        <item>Vlada i politički događaji</item>
        <item>Drugo</item>
        
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>