<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:background="@color/white">

    <RadioButton
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_1" />

    <RadioButton
        android:id="@+id/option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_2" />

    <RadioButton
        android:id="@+id/option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_3" />

    <RadioButton
        android:id="@+id/option4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_4" />
    <RadioButton
        android:id="@+id/option5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_5" />

    <RadioButton
        android:id="@+id/option6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_6" />
    <RadioButton
        android:id="@+id/option7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_7" />
    <RadioButton
        android:id="@+id/option8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_type_8" />
</LinearLayout>
