<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    android:orientation="horizontal"
    android:background="@drawable/border_background"
    android:padding="10dp"
    android:layout_marginVertical="10dp"
    android:id="@+id/one_event"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:text="@string/event_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_type"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/one_event_type"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="5dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/event_guest_number"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:text="@string/guest_num"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:text="@string/location"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:text="@string/event_date"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/event_privacy"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:text="@string/privacy"
            android:textSize="14sp"
            android:textStyle="italic" />



        <!-- Dodajemo novi horizontalni LinearLayout za dugmadi -->

    </LinearLayout>
</LinearLayout>


