<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:background="@drawable/border_background"
    android:padding="10dp"
    android:layout_marginVertical="10dp"
    android:id="@+id/one_event"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="295dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:text="@string/event_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="298dp"
            android:layout_height="56dp"
            android:layout_margin="5dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/btnaddsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/add_sub" />

</LinearLayout>
